:lipstick: Agregando estilos CSS.

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,1 +1,32 @@
+:root {
+    /* Colors */
+    --color-purple: #71237E;
+    --color-black: #111111;
+    --color-white: #ffffff;
+}
 
+.btn-purple {
+    background-color: var(--color-purple);
+    color: var(--color-white);
+    margin-top: 0.5rem;
+}
+
+.btn-purple:hover {
+    background-color: var(--color-black);
+    color: var(--color-white);
+}
+
+.btn-outline-purple {
+    border: 1px solid var(--color-purple);
+    color: var(--color-purple);
+    margin-top: 0.5rem;
+}
+
+.btn-outline-purple:hover {
+    background-color: var(--color-purple);
+    color: var(--color-white);
+}
+
+.bg-purple {
+    background-color: var(--color-purple);
+}
